<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="task"
            type="com.sleekdeveloper.remindme.data.source.domain.Task" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_horizontal_margin"
        android:layout_marginLeft="@dimen/card_horizontal_margin"
        android:layout_marginTop="@dimen/card_vertical_margin"
        android:layout_marginEnd="@dimen/card_horizontal_margin"
        android:layout_marginRight="@dimen/card_horizontal_margin"
        android:layout_marginBottom="@dimen/card_vertical_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_item_padding">

            <TextView
                android:id="@+id/taskDaily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:drawableLeft="@drawable/ic_baseline_cached_24"
                android:drawablePadding="@dimen/task_time_drawable_padding"
                android:text="@string/task_daily"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/taskDate" />

            <CheckBox
                android:id="@+id/taskTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@{task.title}"
                tools:text="@string/task_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/favoriteTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_star_border_24"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/taskTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="@dimen/task_time_drawable_padding"
                android:text="@string/task_time"
                app:drawableLeftCompat="@drawable/ic_baseline_access_time_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskTitle" />

            <TextView
                android:id="@+id/taskDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:drawablePadding="@dimen/task_date_drawable_padding"
                android:text="@string/task_date"
                app:drawableLeftCompat="@drawable/ic_baseline_calendar_today_24"
                app:layout_constraintBaseline_toBaselineOf="@+id/taskTime"
                app:layout_constraintStart_toEndOf="@+id/taskTime" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
